DASHBOARDS DE ADMINS(2) DASHBOARDS DE COORDINADOR ORDENADO DE CARPETAS Y JSPs

--- a/UNmujeres/src/main/webapp/css/sb-admin-2.css
+++ b/UNmujeres/src/main/webapp/css/sb-admin-2.css
@@ -11287,3 +11287,11 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+canvas {
+  width: 100% !important;
+  height: auto !important;
+  display: block;
+  margin: 0 auto;
+  max-height: 350px; /* Ajusta este valor según necesites */
+}
